--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
     <!-- header -->
     <header class="header">
       <div class="container">
-        <a href="./index.html" class="logo">Web<span class="logo-text">Studio</span></a>
+        <a class="logo" href="./index.html">Web<span class="logo-text">Studio</span></a>
       <nav>
-        <ul>
-          <li>
+        <ul class="menu">
+          <li class="menu-item">
             <a class="link current" href="./index.html">Студия</a>
           </li>
-          <li>
+          <li class="menu-item">
             <a class="link" href="./portfolio.html">Портфолио</a>
           </li>
-          <li>
+          <li class="menu-item">
             <a class="link" href="#address">Контакты</a>
           </li>
         </ul>
       </nav>
       
-      <ul>
-        <li>
+      <ul class="contacts">
+        <li class="contacts-item">
           <a class="address-link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
-        <li>
+        <li class="contacts-item">
           <a class="address-link" href="tel:+380961111111"
             >+38 096 111 11 11</a
           >
@@ -57,29 +57,29 @@
       <section class="features">
         <div class="container">
           <h2 hidden>Особенности</h2>
-        <ul class="list-padding">
-          <li>
+        <ul class="features-list">
+          <li class="items">
             <h3 class="title">Внимание к деталям</h3>
             <p class="paragraph">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li>
+          <li class="items">
             <h3 class="title">Пунктуальность</h3>
             <p class="paragraph">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li>
+          <li class="items">
             <h3 class="title">Планирование</h3>
             <p class="paragraph">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li>
+          <li class="items">
             <h3 class="title">Современные технологии</h3>
             <p class="paragraph">
               Значимость этих проблем настолько очевидна, что реализация
@@ -94,24 +94,24 @@
         <div class="container">
           <h2 class="title">Чем мы занимаемся</h2>
         <ul class="list-margin">
-          <li>
-            <img
+          <li class="item-img">
+            <img class="img-block"
               src="./images/we-do/we-do1.png"
               width="370"
               height="294"
               alt="разработка программного обеспечения"
             />
           </li>
-          <li>
-            <img
+          <li class="item-img">
+            <img class="img-block"
               src="./images/we-do/we-do2.png"
               width="370"
               height="294"
               alt="разработка мобильных приложений"
             />
           </li>
-          <li>
-            <img
+          <li class="item-img">
+            <img class="img-block"
               src="./images/we-do/we-do3.png"
               width="370"
               height="294"
@@ -127,7 +127,7 @@
         <h2 class="title">Наша команда</h2>
         <ul class="team-list">
           <li class="list-description">
-            <img
+            <img class="img-block"
               src="./images/comand/productdesigner.png"
               width="270"
               height="260"
@@ -137,7 +137,7 @@
             <p class="position">Product Designer</p>
           </li>
           <li class="list-description">
-            <img
+            <img class="img-block"
               src="./images/comand/frontenddeveloper.png"
               width="270"
               height="260"
@@ -147,7 +147,7 @@
             <p class="position">Frontend Developer</p>
           </li>
           <li class="list-description">
-            <img
+            <img class="img-block"
               src="./images/comand/marketing.png"
               width="270"
               height="260"
@@ -157,7 +157,7 @@
             <p class="position">Marketing</p>
           </li>
           <li class="list-description">
-            <img
+            <img class="img-block"
               src="./images/comand/ui-designer.png"
               width="270"
               height="260"
