--- a/portfolio.html
+++ b/portfolio.html
@@ -14,30 +14,34 @@
     <!-- header -->
     <header class="header">
       <div class="container">
-        <a href="./index.html" class="logo">Web<span class="logo-text">Studio</span></a>
-        <nav>
-          <ul>
-            <li>
-              <a class="link" href="./index.html">Студия</a>
-            </li>
-            <li>
-              <a class="link current" href="./portfolio.html">Портфолио</a>
-            </li>
-            <li>
-              <a class="link" href="#address">Контакты</a>
-            </li>
-          </ul>
-        </nav>
-    
-        <ul>
-          <li>
-            <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="logo" href="./index.html">Web<span class="logo-text">Studio</span></a>
+      <nav>
+        <ul class="menu">
+          <li class="menu-item">
+            <a class="link" href="./index.html">Студия</a>
           </li>
-          <li>
-            <a class="address-link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <li class="menu-item">
+            <a class="link current" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="menu-item">
+            <a class="link" href="#address">Контакты</a>
           </li>
         </ul>
-      </div>
+      </nav>
+      
+      <ul class="contacts">
+        <li class="contacts-item">
+          <a class="address-link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li class="contacts-item">
+          <a class="address-link" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </li>
+      </ul>
+    </div>
     </header>
      <!-- portfolio -->
     <main>
@@ -45,72 +49,72 @@
         <div class="container portfolio-padding">
           <h1 hidden>Портфолио</h1>
           <ul class="filter">
-            <li> <button class="link-filter" type="button">Все</button></li>
-            <li> <button class="link-filter" type="button">Приложения</button></li>
-            <li> <button class="link-filter" type="button">Дизайн</button></li>
-            <li> <button class="link-filter" type="button">Маркетинг</button></li>
-            <li> <button class="link-filter" type="button">Веб-сайты</button></li>
+            <li class="filter-items"> <button class="link-filter" type="button">Все</button></li>
+            <li class="filter-items"> <button class="link-filter" type="button">Приложения</button></li>
+            <li class="filter-items"> <button class="link-filter" type="button">Дизайн</button></li>
+            <li class="filter-items"> <button class="link-filter" type="button">Маркетинг</button></li>
+            <li class="filter-items"> <button class="link-filter" type="button">Веб-сайты</button></li>
           </ul>
             <ul class="content">
-              <li>
+              <li class="content-items">
                 <a class="link" href="">
-                  <img src="./images/portfolio/image1.jpg" width="370" height="294" alt="Технокряк Веб-сайт" />
+                  <img class="img-block" src="./images/portfolio/image1.jpg" width="368" height="294" alt="Технокряк Веб-сайт" />
                   <h2 class="title">Технокряк</h2>
                   <p class="type">Веб-сайт</p>
                 </a>
               </li>
-              <li>
+              <li class="content-items">
                 <a class="link" href="">
-                  <img src="./images/portfolio/image2.jpg" width="370" height="294" alt="Постер Дизайн" />
+                  <img class="img-block" src="./images/portfolio/image2.jpg" width="368" height="294" alt="Постер Дизайн" />
                   <h2 class="title">Постер New Orlean vs Golden Star</h2>
                   <p class="type">Дизайн</p>
                 </a>
               </li>
-              <li>
+              <li class="content-items">
                 <a class="link" href="">
-                  <img src="./images/portfolio/image3.jpg" width="370" height="294" alt="Ресторан Приложение" />
+                  <img class="img-block" src="./images/portfolio/image3.jpg" width="368" height="294" alt="Ресторан Приложение" />
                   <h2 class="title">Ресторан Seafood</h2>
                   <p class="type">Приложение</p>
                 </a>
               </li>
-              <li>
+              <li class="content-items">
                 <a class="link" href="">
-                  <img src="./images/portfolio/image4.jpg" width="370" height="294" alt="Проект Прайм Маркетинг" />
+                  <img class="img-block" src="./images/portfolio/image4.jpg" width="368" height="294" alt="Проект Прайм Маркетинг" />
                   <h2 class="title">Проект Prime</h2>
                   <p class="type">Маркетинг</p>
                 </a>
               </li>
-              <li>
+              <li class="content-items">
                 <a class="link" href="">
-                  <img src="./images/portfolio/image5.jpg" width="370" height="294" alt="Проект Боксес Приложение" />
+                  <img class="img-block" src="./images/portfolio/image5.jpg" width="368" height="294" alt="Проект Боксес Приложение" />
                   <h2 class="title">Проект Boxes</h2>
                   <p class="type">Приложение</p>
                 </a>
               </li>
-              <li>
+              <li class="content-items">
                 <a class="link" href="">
-                  <img src="./images/portfolio/image6.jpg" width="370" height="294" alt="Веб-сайт" />
+                  <img class="img-block" src="./images/portfolio/image6.jpg" width="368" height="294" alt="Веб-сайт" />
                   <h2 class="title">Inspiration has no Borders</h2>
                   <p class="type">Веб-сайт</p>
                 </a>
               </li>
-              <li>
+              <li class="content-items">
                 <a class="link" href="">
-                  <img src="./images/portfolio/image7.jpg" width="370" height="294" alt="Издание Дизайн" />
+                  <img class="img-block" src="./images/portfolio/image7.jpg" width="368" height="294" alt="Издание Дизайн" />
                   <h2 class="title">Издание Limited Edition</h2>
                   <p class="type">Дизайн</p>
                 </a>
               </li>
-              <li>
+              <li class="content-items">
                 <a class="link" href="">
-                  <img src="./images/portfolio/image8.jpg" width="370" height="294" alt="Проект ЛАБ Маркетинг" />
+                  <img class="img-block" src="./images/portfolio/image8.jpg" width="368" height="294" alt="Проект ЛАБ Маркетинг" />
                   <h2 class="title">Проект LAB</h2>
                   <p class="type">Маркетинг</p>
                 </a>
               </li>
-              <li>
+              <li class="content-items">
                 <a class="link" href="">
-                  <img src="./images/portfolio/image9.jpg" width="370" height="294" alt="Приложение" />
+                  <img class="img-block" src="./images/portfolio/image9.jpg" width="368" height="294" alt="Приложение" />
                   <h2 class="title">Growing Business</h2>
                   <p class="type">Приложение</p>
                 </a>
