--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
       
       <ul class="contacts">
         <li class="contacts-item">
-          <a class="address-link" href="mailto:info@devstudio.com"
+          <a class="address-link mail" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
         <li class="contacts-item">
-          <a class="address-link" href="tel:+380961111111"
+          <a class="address-link phone" href="tel:+380961111111"
             >+38 096 111 11 11</a
           >
         </li>
@@ -97,7 +97,7 @@
         <ul class="list-margin">
           <li class="item-img">
             <img class="img-block"
-              src="./images/we-do/we-do1.png"
+              src="./images/we-do/we-do1.jpg"
               width="370"
               height="294"
               alt="разработка программного обеспечения"
@@ -105,7 +105,7 @@
           </li>
           <li class="item-img">
             <img class="img-block"
-              src="./images/we-do/we-do2.png"
+              src="./images/we-do/we-do2.jpg"
               width="370"
               height="294"
               alt="разработка мобильных приложений"
@@ -113,7 +113,7 @@
           </li>
           <li class="item-img">
             <img class="img-block"
-              src="./images/we-do/we-do3.png"
+              src="./images/we-do/we-do3.jpg"
               width="370"
               height="294"
               alt="разработка дизайна веб страниц"
@@ -129,7 +129,7 @@
         <ul class="team-list">
           <li class="list-description">
             <img class="img-block"
-              src="./images/comand/productdesigner.png"
+              src="./images/comand/productdesigner.jpg"
               width="270"
               height="260"
               alt="Игорь Демьяненко"
@@ -139,7 +139,7 @@
           </li>
           <li class="list-description">
             <img class="img-block"
-              src="./images/comand/frontenddeveloper.png"
+              src="./images/comand/frontenddeveloper.jpg"
               width="270"
               height="260"
               alt="Ольга Репина"
@@ -149,7 +149,7 @@
           </li>
           <li class="list-description">
             <img class="img-block"
-              src="./images/comand/marketing.png"
+              src="./images/comand/marketing.jpg"
               width="270"
               height="260"
               alt="Николай Тарасов"
@@ -159,7 +159,7 @@
           </li>
           <li class="list-description">
             <img class="img-block"
-              src="./images/comand/ui-designer.png"
+              src="./images/comand/ui-designer.jpg"
               width="270"
               height="260"
               alt="Михаил Ермаков"
