--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
-    <!-- <link rel="stylesheet" href="./css/reset.css" /> -->
-    <link rel="stylesheet" href="./css/styles.css" />
+     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- header -->
@@ -18,7 +17,7 @@
         <a class="logo" href="./index.html">Web<span class="logo-text">Studio</span></a>
       <nav>
         <ul class="menu">
-          <li class="menu-item">
+          <li class="menu-item">            
             <a class="link current" href="./index.html">Студия</a>
           </li>
           <li class="menu-item">
@@ -32,13 +31,18 @@
       
       <ul class="contacts">
         <li class="contacts-item">
-          <a class="address-link mail" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
+          <a class="address-link" href="mailto:info@devstudio.com"
+            ><svg class="address-link-icon" width="16px" height="12px">
+              <use href="./images/sprite.svg#icon-envelope"></use>
+            </svg>
+            info@devstudio.com</a
           >
         </li>
         <li class="contacts-item">
-          <a class="address-link phone" href="tel:+380961111111"
-            >+38 096 111 11 11</a
+          <a class="address-link" href="tel:+380961111111"
+            ><svg class="address-link-icon" width="10px" height="16px">
+              <use href="./images/sprite.svg#icon-smartphone"></use>
+            </svg>+38 096 111 11 11</a
           >
         </li>
       </ul>
@@ -136,6 +140,28 @@
             />
             <h3 class="name">Игорь Демьяненко</h3>
             <p class="position">Product Designer</p>
+            <ul class="team-networks">
+              <li class="team-networks-list">
+                <a href="https://www.instagram.com/?hl=ru" target="_blank" rel="noopener noreferer" class="team-networks-links"><svg  width="20px" height="20px">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg></a>                
+              </li>
+              <li class="team-networks-list">
+                <a href="https://twitter.com/?lang=ru" target="_blank" rel="noopener noreferer" class="team-networks-links"><svg width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg></a>
+              </li>
+              <li class="team-networks-list">
+                <a href="https://uk-ua.facebook.com/" target="_blank" rel="noopener noreferer" class="team-networks-links"><svg width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg></a>
+              </li>
+              <li class="team-networks-list">
+                <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferer" class="team-networks-links"><svg width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg></a>
+              </li>
+            </ul>
           </li>
           <li class="list-description">
             <img class="img-block"
@@ -146,6 +172,32 @@
             />
             <h3 class="name">Ольга Репина</h3>
             <p class="position">Frontend Developer</p>
+            <ul class="team-networks">
+              <li class="team-networks-list">
+                <a href="https://www.instagram.com/?hl=ru" target="_blank" rel="noopener noreferer" class="team-networks-links"><svg
+                    width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg></a>
+              </li>
+              <li class="team-networks-list">
+                <a href="https://twitter.com/?lang=ru" target="_blank" rel="noopener noreferer" class="team-networks-links"><svg
+                    width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg></a>
+              </li>
+              <li class="team-networks-list">
+                <a href="https://uk-ua.facebook.com/" target="_blank" rel="noopener noreferer" class="team-networks-links"><svg
+                    width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg></a>
+              </li>
+              <li class="team-networks-list">
+                <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferer" class="team-networks-links"><svg
+                    width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg></a>
+              </li>
+            </ul>
           </li>
           <li class="list-description">
             <img class="img-block"
@@ -156,6 +208,32 @@
             />
             <h3 class="name">Николай Тарасов</h3>
             <p class="position">Marketing</p>
+            <ul class="team-networks">
+              <li class="team-networks-list">
+                <a href="https://www.instagram.com/?hl=ru" target="_blank" rel="noopener noreferer" class="team-networks-links"><svg
+                    width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg></a>
+              </li>
+              <li class="team-networks-list">
+                <a href="https://twitter.com/?lang=ru" target="_blank" rel="noopener noreferer" class="team-networks-links"><svg
+                    width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg></a>
+              </li>
+              <li class="team-networks-list">
+                <a href="https://uk-ua.facebook.com/" target="_blank" rel="noopener noreferer" class="team-networks-links"><svg
+                    width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg></a>
+              </li>
+              <li class="team-networks-list">
+                <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferer" class="team-networks-links"><svg
+                    width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg></a>
+              </li>
+            </ul>
           </li>
           <li class="list-description">
             <img class="img-block"
@@ -166,22 +244,104 @@
             />
             <h3 class="name">Михаил Ермаков</h3>
             <p class="position">UI Designer</p>
+            <ul class="team-networks">
+              <li class="team-networks-list">
+                <a href="https://www.instagram.com/?hl=ru" target="_blank" rel="noopener noreferer" class="team-networks-links"><svg
+                    width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg></a>
+              </li>
+              <li class="team-networks-list">
+                <a href="https://twitter.com/?lang=ru" target="_blank" rel="noopener noreferer" class="team-networks-links"><svg
+                    width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg></a>
+              </li>
+              <li class="team-networks-list">
+                <a href="https://uk-ua.facebook.com/" target="_blank" rel="noopener noreferer" class="team-networks-links"><svg
+                    width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg></a>
+              </li>
+              <li class="team-networks-list">
+                <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferer" class="team-networks-links"><svg
+                    width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg></a>
+              </li>
+            </ul>
           </li>
         </ul>
        </div>
+      </section>
+      <section class="clients">
+        <div class="container clients">
+          <h2 class="title">Постоянные клиенты</h2>
+          <ul class="clients-list">
+            <li class="clients-item"><a href="" class="clients-links"><svg class="clients-icon" width="44px" height="50px">
+              <use href="./images/sprite.svg#icon-company-one"></use>
+            </svg></a></li>
+            <li class="clients-item"><a href="" class="clients-links"><svg class="clients-icon" width="44px" height="50px">
+              <use href="./images/sprite.svg#icon-company-two"></use>
+            </svg></a></li>
+            <li class="clients-item"><a href="" class="clients-links"><svg class="clients-icon" width="44px" height="50px">
+              <use href="./images/sprite.svg#icon-company-three"></use>
+            </svg></a></li>
+            <li class="clients-item"><a href="" class="clients-links"><svg class="clients-icon" width="44px" height="50px">
+              <use href="./images/sprite.svg#icon-company-four"></use>
+            </svg></a></li>
+            <li class="clients-item"><a href="" class="clients-links"><svg class="clients-icon" width="44px" height="50px">
+              <use href="./images/sprite.svg#icon-company-five"></use>
+            </svg></a></li>
+            <li class="clients-item"><a href="" class="clients-links"><svg class="clients-icon" width="44px" height="50px">
+              <use href="./images/sprite.svg#icon-company-six"></use>
+            </svg></a></li>
+          </ul>
+        </div>  
       </section>
     </main>
     <!-- footer -->
     <footer class="footer">
       <div class="container footer-padding">
-        <a class="logo" href="./index.html">Web<span class="logo-text">Studio</span>
-        </a>
-        <address class="address" id="address">
-          <a class="map" href="https://goo.gl/maps/mBAU42XWuLWp58m89" target="_blank" rel="noopener noreferer">г. Киев, пр-т
-            Леси Украинки, 26</a>
-          <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
-        </address>
+        <div>
+          <a class="logo" href="./index.html">Web<span class="logo-text">Studio</span>
+          </a>
+          <address class="address" id="address">
+            <a class="map" href="https://goo.gl/maps/mBAU42XWuLWp58m89" target="_blank" rel="noopener noreferer">г. Киев, пр-т
+              Леси Украинки, 26</a>
+            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </address>
+        </div>
+        <div class="footer-join">
+          <p class="footer-join-title">присоединяйтесь</p>
+          <ul class="footer-networks">
+            <li class="footer-networks-list">
+              <a href="https://www.instagram.com/?hl=ru" target="_blank" rel="noopener noreferer" class="footer-networks-links"><svg
+                  width="20px" height="20px">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg></a>
+            </li>
+            <li class="team-networks-list">
+              <a href="https://twitter.com/?lang=ru" target="_blank" rel="noopener noreferer" class="footer-networks-links"><svg
+                  width="20px" height="20px">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg></a>
+            </li>
+            <li class="team-networks-list">
+              <a href="https://uk-ua.facebook.com/" target="_blank" rel="noopener noreferer" class="footer-networks-links"><svg
+                  width="20px" height="20px">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg></a>
+            </li>
+            <li class="team-networks-list">
+              <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferer" class="footer-networks-links"><svg
+                  width="20px" height="20px">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
