--- a/portfolio.html
+++ b/portfolio.html
@@ -16,33 +16,35 @@
     <header class="header">
       <div class="container">
         <a class="logo" href="./index.html">Web<span class="logo-text">Studio</span></a>
-      <nav>
-        <ul class="menu">
-          <li class="menu-item">
-            <a class="link" href="./index.html">Студия</a>
+        <nav>
+          <ul class="menu">
+            <li class="menu-item">
+              <a class="link" href="./index.html">Студия</a>
+            </li>
+            <li class="menu-item">
+              <a class="link current" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="menu-item">
+              <a class="link" href="#address">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+    
+        <ul class="contacts">
+          <li class="contacts-item">
+            <a class="address-link" href="mailto:info@devstudio.com"><svg class="address-link-icon" width="16px"
+                height="12px">
+                <use href="./images/sprite.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a>
           </li>
-          <li class="menu-item">
-            <a class="link current" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li class="menu-item">
-            <a class="link" href="#address">Контакты</a>
+          <li class="contacts-item">
+            <a class="address-link" href="tel:+380961111111"><svg class="address-link-icon" width="10px" height="16px">
+                <use href="./images/sprite.svg#icon-smartphone"></use>
+              </svg>+38 096 111 11 11</a>
           </li>
         </ul>
-      </nav>
-      
-      <ul class="contacts">
-        <li class="contacts-item">
-          <a class="address-link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="contacts-item">
-          <a class="address-link" href="tel:+380961111111"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
-    </div>
+      </div>
     </header>
      <!-- portfolio -->
     <main>
@@ -127,14 +129,46 @@
     <!-- footer -->
     <footer class="footer">
       <div class="container footer-padding">
-        <a class="logo" href="./index.html">Web<span class="logo-text">Studio</span>
-        </a>
-        <address class="address" id="address">
-          <a class="map" href="https://goo.gl/maps/mBAU42XWuLWp58m89" target="_blank" rel="noopener noreferer">г. Киев, пр-т
-            Леси Украинки, 26</a>
-          <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
-        </address>
+        <div>
+          <a class="logo" href="./index.html">Web<span class="logo-text">Studio</span>
+          </a>
+          <address class="address" id="address">
+            <a class="map" href="https://goo.gl/maps/mBAU42XWuLWp58m89" target="_blank" rel="noopener noreferer">г. Киев,
+              пр-т
+              Леси Украинки, 26</a>
+            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </address>
+        </div>
+        <div class="footer-join">
+          <p class="footer-join-title">присоединяйтесь</p>
+          <ul class="footer-networks">
+            <li class="footer-networks-list">
+              <a href="https://www.instagram.com/?hl=ru" target="_blank" rel="noopener noreferer"
+                class="footer-networks-links"><svg width="20px" height="20px">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg></a>
+            </li>
+            <li class="team-networks-list">
+              <a href="https://twitter.com/?lang=ru" target="_blank" rel="noopener noreferer"
+                class="footer-networks-links"><svg width="20px" height="20px">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg></a>
+            </li>
+            <li class="team-networks-list">
+              <a href="https://uk-ua.facebook.com/" target="_blank" rel="noopener noreferer"
+                class="footer-networks-links"><svg width="20px" height="20px">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg></a>
+            </li>
+            <li class="team-networks-list">
+              <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferer"
+                class="footer-networks-links"><svg width="20px" height="20px">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
       </body>
